[gd_scene load_steps=83 format=2]

[ext_resource path="res://elementos/imagem/pontos/ponto.png" type="Texture" id=1]
[ext_resource path="res://recursos/jogo/ponto_de_entrega/ponto_de_entrega.gd" type="Script" id=2]
[ext_resource path="res://addons/controle_de_toque/controle_toque.gd" type="Script" id=3]
[ext_resource path="res://recursos/jogo/texto_contador/texto_contador.tscn" type="PackedScene" id=4]
[ext_resource path="res://elementos/imagem/ambiente/explosao_vertical.png" type="Texture" id=5]
[ext_resource path="res://recursos/jogo/ponto_de_entrega/AudioStreamPonto.gd" type="Script" id=6]
[ext_resource path="res://elementos/imagem/campanha/coracao-colorido.png" type="Texture" id=7]
[ext_resource path="res://elementos/imagem/campanha/coracao-preto.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 124.004

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Gradient" id=74]
offsets = PoolRealArray( 0, 0.0734694, 0.489796, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 700, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 800, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 900, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 700, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 800, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 900, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 200, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 300, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 400, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 500, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 600, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 700, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 800, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 900, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 0, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 100, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 200, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 300, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 400, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 500, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 5 )
region = Rect2( 600, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 5 )
region = Rect2( 700, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 5 )
region = Rect2( 800, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 5 )
region = Rect2( 900, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 5 )
region = Rect2( 0, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 5 )
region = Rect2( 100, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 5 )
region = Rect2( 200, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 5 )
region = Rect2( 300, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 5 )
region = Rect2( 400, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 500, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 5 )
region = Rect2( 600, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 5 )
region = Rect2( 700, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 5 )
region = Rect2( 800, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 5 )
region = Rect2( 900, 500, 100, 100 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 5 )
region = Rect2( 0, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 5 )
region = Rect2( 100, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 5 )
region = Rect2( 200, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 5 )
region = Rect2( 300, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 5 )
region = Rect2( 400, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 5 )
region = Rect2( 500, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 5 )
region = Rect2( 600, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 5 )
region = Rect2( 700, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 5 )
region = Rect2( 800, 600, 100, 100 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 900, 600, 100, 100 )

[sub_resource type="SpriteFrames" id=73]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": false,
"name": "parabens",
"speed": 60.0
} ]

[node name="ponto_de_entrega" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Mobilizado" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -40 )
texture = ExtResource( 1 )

[node name="Desmobilizado" type="Sprite" parent="."]
position = Vector2( 0, -40 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -29 )
shape = SubResource( 1 )

[node name="ControleDeToque" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="BarraDeProgresso" type="ProgressBar" parent="."]
visible = false
margin_left = -150.0
margin_top = 64.0
margin_right = 150.0
margin_bottom = 114.0
step = 1.0

[node name="texto_contador" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -204 )
z_index = 10
z_as_relative = false

[node name="c_colorido" type="Sprite" parent="texto_contador"]
visible = false
position = Vector2( 0, 12 )
scale = Vector2( 0.306667, 0.306667 )
texture = ExtResource( 7 )

[node name="Particles2D" type="CPUParticles2D" parent="texto_contador/c_colorido"]
position = Vector2( 0, 547.826 )
scale = Vector2( 0.5, 0.5 )
amount = 3
lifetime = 3.0
texture = ExtResource( 7 )
direction = Vector2( 0, -1 )
spread = 28.78
gravity = Vector2( 0, 100 )
initial_velocity = 700.0
initial_velocity_random = 0.62
color_ramp = SubResource( 74 )
anim_speed = 16.23
anim_speed_random = 0.44

[node name="c_preto" type="Sprite" parent="texto_contador"]
position = Vector2( 0, 10 )
scale = Vector2( 0.306667, 0.306667 )
texture = ExtResource( 8 )

[node name="Explosao" type="AnimatedSprite" parent="."]
scale = Vector2( 6, 6 )
frames = SubResource( 73 )

[node name="AudioStreamPonto" type="AudioStreamPlayer2D" parent="."]
attenuation = 1.68179
panning_strength = 2.0
bus = "SFX PONTO"
script = ExtResource( 6 )

[connection signal="atividade_ponto" from="." to="AudioStreamPonto" method="_on_ponto_de_entrega_atividade_ponto"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="toque_realizado" from="ControleDeToque" to="." method="_on_ControleDeToque_toque_realizado"]
